devops/chapter-files/traffic-management/vs-forecast-retry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: forecast-route
spec:
  hosts:
  - forecast
  http:
  - route:
    - destination:
        host: forecast
        subset: v2
    retries:
      attempts: 3       
      perTryTimeout: 1s
      retryOn: "5xx"
